--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,5 @@ services:
       - COMMAND_PREFIX=${COMMAND_PREFIX}
       - BASE_DIR=${BASE_DIR}
     volumes:
-      - ./data:/app/data
+      - .:/app
     restart: always
