--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,13 @@ __pycache__/
 
 # Environment variables
 .env
+.devcontainer
+.vscode
 
 # Temporary files and output
-data/
+data/src/*
+tests/test_images/src/*
+tests/test_images/test_output/*
 
 # OS-specific
 .DS_Store
