--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,14 @@
 services:
   discord-bot:
     build: .
-    container_name: watermark-discord-bot-1
+    container_name: wm-discord-bot
+    env_file:
+      - .env
     environment:
       - DISCORD_TOKEN=${DISCORD_TOKEN}
       - COMMAND_PREFIX=${COMMAND_PREFIX}
-      - BASE_DIR=${BASE_DIR}
+      - PUID=1000
+      - PGID=1000
     volumes:
       - .:/app
     restart: always
